--- a/CV.tex
+++ b/CV.tex
@@ -119,6 +119,12 @@ Senior Data Scientist
 \DatestampYMD{2018}{03}{10} --
 Present 
 \begin{detail}
+\BulletItem Implemented production pipeline for seed placement product using Pyspark and Airflow
+\BulletItem Worked with researchers to refine evaluation and other components of seed placement model to prepare for production
+\BulletItem Created internal Python package for model evaluation
+\BulletItem Hold office hours for team's data science platform. Answer questions from researchers on data science best practices
+\BulletItem Built POC of model to flag demo fields using clustering
+\BulletItem Advised researchers in multi-company collaboration on deep learning methods to predict yield during growing season
 \end{detail}
 
 \BigGap
@@ -153,7 +159,7 @@ Research Assistant
 \begin{detail}
 \BulletItem Applied convolutional neural networks to identify wildlife trade from online retailers using image and text data
 \BulletItem Improved models by creating Word2Vec embeddings using large amounts of unlabeled data
-\BulletItem Built end to end model to scrape and clean data, classify different properties of items, and store results using Python, TensorFlow
+\BulletItem Built end to end model to scrape and clean data, classify item properties, and store results using Python, TensorFlow
 \BulletItem Set up and maintain a MongoDB database of potential wildlife trade and model results
 \end{detail}
 
@@ -169,7 +175,7 @@ Data Science Intern
 \DatestampYMD{2016}{06}{16} --
 \DatestampYMD{2016}{09}{16}
 \begin{detail}
-\BulletItem Designed and implemented methods for diagnosing skill levels of new students with multi-armed bandit approaches in Java
+\BulletItem Designed and implemented methods for diagnosing skill levels of new students with bandit approaches in Java
 \BulletItem
 Formulated metrics to evaluate these policies and ran simulations of students to assess different approaches
 \BulletItem Investigated quality of student simulations and suggested improvements
@@ -246,26 +252,25 @@ Implemented model (\url{https://arxiv.org/abs/1606.02858}) for question answerin
 
 \BigGap
 
-\textbf{Parsing Images of Characters Using MCMC},
-MS in Data Science, NYU \hfill
-Fall 2016
+%\textbf{Parsing Images of Characters Using MCMC},
+%MS in Data Science, NYU \hfill
+%Fall 2016
 
-\GapNoBreak
-\begin{detail}
-\BulletItem
-Applied Markov Chain Monte-Carlo methods to improve inference process for parsing images of hand-drawn characters into strokes
-\end{detail}
+%\GapNoBreak
+%\begin{detail}
+%\BulletItem
+%Applied Markov Chain Monte-Carlo methods to improve inference process for parsing images of hand-drawn characters into strokes
+%\end{detail}
 
 %%%%%%%%%%%%
 %% SKILLS %%
 %%%%%%%%%%%%
-
 \section
 {Languages \& Tools}
 {Languages \& Tools}
 {PDF:LanguagesTools}
 
-Python (advanced), SQL (advanced), Java (intermediate), Javascript (intermediate), MATLAB (intermediate), Lua (novice), R (novice), LaTeX, Vim, AWS, Git, Pandas, TensorFlow, Keras, scikit-learn, Torch, D3.js, MongoDB, Spark, YARN, Docker
+Python (advanced), SQL (advanced), Java (intermediate), Javascript (intermediate), R (intermediate), MATLAB (novice), Lua (novice), Scala (novice), LaTeX, Vim, AWS, Git, Pandas, TensorFlow, Keras, scikit-learn, Torch, D3.js, MongoDB, Spark, YARN, Docker, Apache Airflow
 
 %%%%%%%%%%%%
 %% OS %%
