add phone number

--- a/CV.tex
+++ b/CV.tex
@@ -59,6 +59,7 @@ breaklinks}
 \href{mailto:christina.bogdan@gmail.com}
 {christina.bogdan@gmail.com}
 \, \SubBulletSymbol \, \url{christaina.github.io}
+\SubBulletSymbol \, (347) 306-7370
 \end{subtitle}
 
 \begin{body}
