--- a/CV.tex
+++ b/CV.tex
@@ -59,6 +59,7 @@ breaklinks}
 \href{mailto:christina.bogdan@gmail.com}
 {christina.bogdan@gmail.com}
 \, \SubBulletSymbol \, \url{christaina.github.io}
+%\SubBulletSymbol \, (347) 306-7370
 \end{subtitle}
 
 \begin{body}
@@ -114,16 +115,30 @@ San Francisco, CA
 
 \GapNoBreak
 %\BulletItem
-Senior Data Scientist
+Senior Data Scientist (Data Quality)
 \hfill
-\DatestampYMD{2018}{03}{10} --
+\DatestampYMD{2019}{02}{10} --
 Present 
 \begin{detail}
-\BulletItem Implemented production pipeline for seed placement product using Pyspark and Airflow
-\BulletItem Worked with researchers to refine evaluation and other components of seed placement model to prepare for production
-\BulletItem Created internal Python package for model evaluation
-\BulletItem Hold office hours for team's data science platform. Answer questions from researchers on data science best practices
-\BulletItem Built POC of model to flag demo fields using clustering
+\BulletItem Lead multi-team collaboration in evaluation of algorithms yield monitor data cleaning for use in outcome based pricing product as well as for use in research across the organization.
+\end{detail}
+
+\BigGap
+
+
+\textbf{The Climate Corporation},
+San Francisco, CA
+
+\GapNoBreak
+%\BulletItem
+Senior Data Scientist (Data Analytics)
+\hfill
+\DatestampYMD{2018}{03}{10} --
+\DatestampYMD{2019}{02}{10}
+\begin{detail}
+\BulletItem Led implementation of production pipeline for major company product using Pyspark and Airflow
+\BulletItem Managed cross-team coordination with researchers developing model in above pipeline and upstream engineers. Led conversation with researchers in development of evaluation metrics and model stability checks.
+\BulletItem Led office hours for team's data science platform. Answer questions from researchers on data science best practices related to PySpark, SQL, Python, and model building.
 \BulletItem Advised researchers in multi-company collaboration on deep learning methods to predict yield during growing season
 \end{detail}
 
@@ -135,13 +150,13 @@ San Francisco, CA
 
 \GapNoBreak
 %\BulletItem
-Data Scientist
+Data Scientist (Data Analytics)
 \hfill
 \DatestampYMD{2017}{07}{10} --
 \DatestampYMD{2018}{03}{09}
 \begin{detail}
 \BulletItem Created compressed representations of weather time series data using autoencoders for use as features
-\BulletItem Implement pipeline to train deep learning models at scale with Spark
+\BulletItem Implemented pipeline for distributed training of deep learning models at scale with PySpark
 \BulletItem Wrote post for tech blog on process of operationalizing distributed deep learning on our Spark platform
 \end{detail}
 
@@ -178,7 +193,6 @@ Data Science Intern
 \BulletItem Designed and implemented methods for diagnosing skill levels of new students with bandit approaches in Java
 \BulletItem
 Formulated metrics to evaluate these policies and ran simulations of students to assess different approaches
-\BulletItem Investigated quality of student simulations and suggested improvements
 \BulletItem Implemented Bayesian optimization algorithm in Python for quickly optimizing parameters of recommender to automate QA using simulations
 \end{detail}
 
@@ -189,15 +203,13 @@ New York, NY
 
 \GapNoBreak
 %\BulletItem
-Part-Time Data Analyst
+Data Analyst (Part-time)
 \hfill
 \DatestampYMD{2014}{05}{05} --
 \DatestampYMD{2016}{05}{24}
 \begin{detail}
 \BulletItem
-Automated daily ETL process to integrate data from multiple sources and load in Amazon Redshift using Python
-\BulletItem Held a series of seminars instructing team members on using Python for data analysis
-\BulletItem Created dashboards in Tableau and QlikView summarizing advertising trends
+Automated a previously manual ETL process to integrate data from multiple sources and load in Amazon Redshift using Python. Pipeline was ran daily and fed into a business critical dashboard consumed by sales teams. Automation saved at least one hour of analyst work per day and resolved worry of human error in the complex manual process.
 \end{detail}
 
 \BigGap
@@ -237,18 +249,6 @@ Created general heuristic to restructure and reduce large retweet network while 
 \BulletItem Won 'Best Data Visualization' at the NYU Center for Data Science Academy Awards
 \end{detail}
 
-\BigGap
-
-\textbf{Question-Answering Using Deep Learning},
-MS in Data Science, NYU \hfill
-Fall 2016
-
-\GapNoBreak
-\begin{detail}
-\BulletItem
-Implemented model (\url{https://arxiv.org/abs/1606.02858}) for question answering in TensorFlow
-\BulletItem Experimented with model architecture using different methods of embedding and attention
-\end{detail}
 
 \BigGap
 
